--- a/Clase15/Clase15.csproj
+++ b/Clase15/Clase15.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Modelos\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Modelos\" />
+  </ItemGroup>
 </Project>
