--- a/Clase16/Clase16.csproj
+++ b/Clase16/Clase16.csproj
@@ -9,8 +9,10 @@
 
   <ItemGroup>
     <None Remove="Modelo\" />
+    <None Remove="Repositorio\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Modelo\" />
+    <Folder Include="Repositorio\" />
   </ItemGroup>
 </Project>
