--- a/Clase19/Clase19.csproj
+++ b/Clase19/Clase19.csproj
@@ -9,8 +9,12 @@
 
   <ItemGroup>
     <None Remove="Modelo\" />
+    <None Remove="Reposistorio\" />
+    <None Remove="Frontend\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Modelo\" />
+    <Folder Include="Reposistorio\" />
+    <Folder Include="Frontend\" />
   </ItemGroup>
 </Project>
